# tv-tracker

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: import_tvtime.py
tv_tracker/: __init__.py  __main__.py  cli.py  config.py  db.py  models.py  services.py  settings_store.py
tv_tracker/api/: __init__.py  base.py  jikan.py  tmdb.py
tv_tracker/tui/: __init__.py  app.py  common.py  config_screen.py  confirm.py  dashboard.py  item_detail.py  search.py  status_select.py  tracked.py
