[project]
name = "tv-tracker"
version = "0.1.0"
description = "A CLI tool for tracking movies and shows (including anime)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
]

[project.scripts]
tv-tracker = "tv_tracker.cli:app"

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyrefly]
project-excludes = [".venv/**"]

[tool.uv]
package = true
